# scamshield-py

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  config.py  db.py  logger.py  main.py  models.py
app/api/: admin.py  alerts.py  graph.py  health.py  scenarios.py  transfer.py
app/core/: oss.py
app/core/ai_engine/: engine.py
app/core/identity/: endpoints.py  service.py
app/core/mule_network/: endpoints.py  graph_analytics.py  ml_engine.py  service.py
app/core/scoring/: demo_overrides.py  endpoints.py  features.py  rules.py  service.py  weights.py
app/graph/: builder.py  patterns.py  service.py
app/schemas/: alerts.py  graph.py  identity.py  intelligence.py  mule_network.py  scenarios.py  transfer.py
app/scoring/: ai_engine.py  features.py  model.py  rules.py  service.py
scripts/: seed.py  seed_demo_companions.py  train_model.py
tests/: test_demo_scenarios.py  test_l2_scoring.py
