[project]
name = "scamshield-backend"
version = "0.1.0"
description = "ScamShield backend — FastAPI + SQLAlchemy + scikit-learn + NetworkX"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "networkx>=3.4",
    "numpy>=2.0",
    "faker>=30",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "scikit-learn>=1.5",
    "mangum>=0.17",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
ml = [
    "shap>=0.46",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
